src/tests/snapshots/gitu__tests__pull__pull_menu_existing_push_remote_and_upstream.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Pull                    Arguments                                              |
 p from origin           -r Rebase local commits (--rebase)                     |
 u from origin/main                                                             |
 e from elsewhere                                                               |
 q/esc Cancel/Quit                                                              |
styles_hash: 77ad4104e5ef8a5a
